service-a/k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-v2-a
  labels:
    app: service-v2-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-v2-a
      version: v1
  template:
    metadata:
      labels:
        app: service-v2-a
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: service-v2-a
          image: quay.io/sasachde/service-v2-a:v1.0.3
          ports:
            - containerPort: 8080
