service-a/k8s/deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-v2-a-v2
  labels:
    app: service-v2-a
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-v2-a
      version: v2
  template:
    metadata:
      labels:
        app: service-v2-a
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: service-v2-a
          image: quay.io/sasachde/service-v2-a:v2.0.2
          ports:
            - containerPort: 8080
