service-a/k8s/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-v2-a
  labels:
    app: service-v2-a
    service: service-v2-a
spec:
  selector:
    app: service-v2-a
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
