service-a/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    service: service-a
spec:
  selector:
    app: service-a
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
