service-a/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-a
spec:
  host: service-a
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: service-a-default
      labels:
        app: service-a
        version: v1
