service-a/k8s/virtual-service-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-v2-a
spec:
  hosts:
    - "*"
  gateways:
    - sanjaypsachdev-gateway
  http:
    - match:
        - uri:
            prefix: /service-v2-a
      route:
        - destination:
            host: service-v2-a
            subset: service-v2-a-default
            port:
              number: 80
          weight: 80
        - destination:
            host: service-v2-a
            subset: service-v2-a-canary
            port:
              number: 80
          weight: 20
