service-a/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
    - "*"
  gateways:
    - sanjaypsachdev-gateway
  http:
    - match:
        - uri:
            prefix: /service-a
      route:
        - destination:
            name: port-8080
            host: service-a
            subset: service-a-default
            port:
              number: 80
